@@ -1,0 +1,9 @@
+package com.metaweb.gridworks.templating;
+
+class StaticFragment extends Fragment {
+	final public String text;
+	
+	public StaticFragment(String text) {
+		this.text = text;
+	}
+}
