@@ -80,6 +80,7 @@
     <script type="text/javascript" src="scripts/dialogs/clustering-dialog.js"></script>
     <script type="text/javascript" src="scripts/dialogs/scatterplot-dialog.js"></script>
     <script type="text/javascript" src="scripts/dialogs/extend-data-preview-dialog.js"></script>
+    <script type="text/javascript" src="scripts/dialogs/templating-exporter-dialog.js"></script>
     
     <script type="text/javascript" src="scripts/protograph/schema-alignment.js"></script>
     <script type="text/javascript" src="scripts/protograph/schema-alignment-ui-node.js"></script>
